# nutrition

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
source/: CMakeLists.txt
source/nutrition/: dynamic_optimization.cpp  evolutionary_algorithm.cpp  evolutionary_algorithm.h  food_database.cpp  food_database.h  nutrition_facts.cpp  nutrition_facts.h  user_diet.cpp  user_diet.h  user_preference_database.cpp  user_preference_database.h  user_preferences.cpp  user_preferences.h  user_targets.cpp  user_targets.h
standalone/: CMakeLists.txt
standalone/cli/: CMakeLists.txt  main.cpp  run_model.cpp  run_model.h
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  test_food_database.cpp  test_nutrition_facts.cpp  test_user_preference.cpp
